--- a/panphon/data/dolgopolsky_prime.yml
+++ b/panphon/data/dolgopolsky_prime.yml
@@ -31,6 +31,10 @@
     def: "[+lat]"
     label: L
 -
+    name: labiovelar glide
+    def: "[-syl +son +lab]"
+    label: W
+-
     name: laryngeals
     def: "[-syl +son +cons +cont -cor -hi -back -lo]"
     label: R
@@ -42,10 +46,6 @@
     name: palatal glide
     def: "[-syl +son +cont +hi -lo -back]"
     label: J
--
-    name: labiovelar glide
-    def: "[-syl +son]"
-    label: W
 -
     name: consonants
     def: "[-syl]"
